<resources>
    <string name="app_name">TaskMenager</string>
    <string name="task_name">New task</string>
    <string name="stat">Statistic</string>
    <string name="new_task">New task</string>
    <string name="date">DD</string>
    <string name="month">MM</string>
    <string name="year">YYYY</string>
    <string name="minute">MM</string>
    <string name="hour">HH</string>
    <string name="task_descp">Task description</string>
    <string name="remind">Remind me 15 minutes before timeout</string>
    <string name="add_task">Add task</string>
    <string name="cnc_taks">Cancel task</string>
    <string name="confirm_taks">Confirm enter</string>
    <string name="save_taks">Save task</string>
    <string name="delete_taks">Delete task</string>
    <string name="empty"></string>
    <string name="list_date">1/1/2018</string>
    <string name="task_completed">Task complet </string>
    <string name="back_to_main">Back to main menu </string>
    <string name="high_priority">High priority tasks </string>
    <string name="medium_priority">Medium priority tasks </string>
    <string name="low_priority">Low priority tasks </string>
</resources>
