<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ra402014.pnrs.rtrk.taskmenager.Task"
    android:orientation="vertical"
    android:weightSum="1">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/task_name"
        android:ems="10"
        android:id="@+id/taskName"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

         <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextDate"
             android:inputType="time"
            android:text="@string/date"
            android:textAlignment="center"/>

         <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editTextMonth"
            android:text="@string/month"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editTextYear"
            android:text="@string/year"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="50dp">

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editTextHour"
            android:text="@string/hour"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editTextMinute"
            android:text="@string/minute"
            android:layout_weight="1"
            android:textAlignment="center"/>

    </LinearLayout>

    <EditText
        android:id="@+id/taskDescriptor"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/task_descp"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/checkBoxReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        android:text="@string/remind" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="3">


        <Button
            android:id="@+id/redButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorButtonRed" />

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/colorButtonYellow" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorButtonGreen" />

    </LinearLayout>

    <Button
        android:id="@+id/confirmTask"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/confirm_taks"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_marginTop="4dp">


        <Button
            android:id="@+id/addTask"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/cancelTask"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cnc_taks"
            android:textAlignment="center" />

    </LinearLayout>


</LinearLayout>
